5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1668_2973.log
== TEST (2019-04-15 18:20:47) 
-- CODE:
posicao = int(input("posicao inicial: "))
velocidade = int(inputo("velocidade: "))
tempo = int(input("tempo: "))

movimento = ("")
if velocidade <= 100
	print("OK")
-- ERROR:
File "XXXX", line 6
    if velocidade <= 100
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:07) 
-- CODE:
posicao = int(input("posicao inicial: "))
velocidade = int(inputo("velocidade: "))
tempo = int(input("tempo: "))


if velocidade <= "100"
	print("OK")
-- ERROR:
File "XXXX", line 6
    if velocidade <= "100"
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:21:59) 
-- CODE:
posicao = int(input("posicao inicial: "))
velocidade = int(inputo("velocidade: "))
tempo = int(input("tempo: "))


if velocidade <= 100
	print("OK")
-- ERROR:
File "XXXX", line 6
    if velocidade <= 100
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:52) 
-- CODE:
posicao = int(input("posicao inicial: "))
velocidade = int(inputo("velocidade: "))
tempo = int(input("tempo: ")
movimento = ("posicao final = posicao inicial + velocidade")				
-- ERROR:
File "XXXX", line 4
    movimento = ("posicao final = posicao inicial + velocidade")				
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:08) 
-- CODE:
posicao = int(input("posicao inicial: "))
velocidade = int(inputo("velocidade: "))
tempo = int(input("tempo: ")
movimento = "posicao final = posicao inicial + velocidade"				
-- ERROR:
File "XXXX", line 4
    movimento = "posicao final = posicao inicial + velocidade"				
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:25) 
-- CODE:
posicao = int(input("posicao inicial: "))
velocidade = int(inputo("velocidade: "))
tempo = int(input("tempo: ")
movimento = posicao final = posicao inicial + velocidade				
-- ERROR:
File "XXXX", line 4
    movimento = posicao final = posicao inicial + velocidade				
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:34) 
-- CODE:
posicao = int(input("posicao inicial: "))
velocidade = int(inputo("velocidade: "))
tempo = int(input("tempo: ")
movimento : posicao final = posicao inicial + velocidade				
-- ERROR:
File "XXXX", line 4
    movimento : posicao final = posicao inicial + velocidade				
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:38) 
-- CODE:
posicao = int(input("posicao inicial: "))
velocidade = int(inputo("velocidade: "))
tempo = int(input("tempo: ")
movimento: posicao final = posicao inicial + velocidade				
-- ERROR:
File "XXXX", line 4
    movimento: posicao final = posicao inicial + velocidade				
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
